Fix PR hierarchy

--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -79,7 +79,7 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 
 ### Pull Requests
 
-- 🚀 Release ➾ Taqueria v0.24.1 by @hu3man in [#1447](https://github.com/ecadlabs/taqueria/pull/1447)
+- 🚀 Release ➾ Taqueria v0.24.2 #1504 by @hu3man in [#1504](https://github.com/ecadlabs/taqueria/pull/1504)
 - Updating tests to become modules for TS requirement by @alexzbusko in [#1500](https://github.com/ecadlabs/taqueria/pull/1500)
 - 🛠️ Fix ➾ Update Taqueria.io Documentation by @hu3man in https://github.com/ecadlabs/taqueria/pull/1496
 - 🧽 Chore ➾ Bump loader-utils from 2.0.2 to 2.0.4 in /website by @dependabot in [#1497](https://github.com/ecadlabs/taqueria/pull/1497)
@@ -266,6 +266,7 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 - 🛠️ Fix ➾ Remove Dependency on play-sound-mp3 Package by @hu3man in [#1485](https://github.com/ecadlabs/taqueria/pull/1485)
 - 🛠️ Fix ➾ Typos in the Taqueria Documentation by @michaelkernaghan in [#1470](https://github.com/ecadlabs/taqueria/pull/1470)
 - 🧽 Chore ➾ (ci) pin node version to v16.16.x by @GImbrailo in [#1486](https://github.com/ecadlabs/taqueria/pull/1486)
+- 🚀 Release ➾ Taqueria v0.24.1 by @hu3man in [#1447](https://github.com/ecadlabs/taqueria/pull/1447)
 
 ## Taqueria v0.22.2  
 
