--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -34,6 +34,10 @@ The available constants you can set in a `./.env` file are:
 
 - Tests now use compliant TS modules
 
+### Deprecations and Breaking Changes
+
+- The use of `<CONTRACT_NAME>.storages.<EXTENSION>` and `<CONTRACT_NAME>.parameters.<EXTENSION>` are now deprecated and will be removed in the future
+
 ### Other Product Changes
 
 - A `quickstart.md` file is no longer created on `taq init`
