Revert "✨ Feature ➾ Rename `<CONTRACT>.storages.mligo` to `<CONTRACT>.storageList.mligo` and similarly for the parameter part (#1507)"
This reverts commit 0fef0138aa1d04495f0a7f2222b855b8e0fa8dae.

--- a/website/docs/getting-started/quickstart.mdx
+++ b/website/docs/getting-started/quickstart.mdx
@@ -21,7 +21,7 @@ This quickstart guide will teach you the fundamentals of using Taqueria in 10 mi
 What you will accomplish:
 - Initialize a new Taqueria project
 - Install plugins for LIGO, Flextesa, and Taquito
-- Creating a new LIGO contract, along with its associated storage list and parameter list files.
+- Creating a new LIGO contract, along with its associated storages and parameters files.
 - Compile the LIGO smart contract
 - Start a local Flextesa sandbox 
 - Originate the compiled smart contract to the sandbox
@@ -111,14 +111,18 @@ let main (action, store : parameter * storage) : return =
  | Reset         -> 0)
 ```
 
-```ligo title="counter.storageList.mligo"
+```ligo title="counter.storages.mligo"
 let initial_count: storage = 42
 let another_count: storage = 23 + 18 - 1
 ```
 
-```ligo title="counter.parameterList.mligo"
+```ligo title="counter.parameters.mligo"
 let increment_by_3: parameter = Increment 3
 ```
+
+:::caution
+Make sure you name it `counter.storages.mligo` and not `counter.storage.mligo` (note the extra `s`)
+:::
 
 You can now compile this contract, along with its storage and parameter values, by simply running the following command from the root of the project directory:
 ```shell
@@ -128,16 +132,16 @@ taq compile counter.mligo
 Taqueria will then output the following, and the artifacts created:
 ```shell
 ❯ taq compile counter.mligo                     
-┌────────────────────────────────┬───────────────────────────────────────────────┐
-│ Contract                       │ Artifact                                      │
-├────────────────────────────────┼───────────────────────────────────────────────┤
-│ counter.mligo                  │ artifacts/counter.tz                          │
-├────────────────────────────────┼───────────────────────────────────────────────┤
-│ counter.storageList.mligo      │ artifacts/counter.default_storage.tz          │
-│                                │ artifacts/counter.storage.another_count.tz    │
-├────────────────────────────────┼───────────────────────────────────────────────┤
-│ counter.parameterList.mligo    │ artifacts/counter.parameter.increment_by_3.tz │
-└────────────────────────────────┴───────────────────────────────────────────────┘
+┌──────────────────────────┬───────────────────────────────────────────────┐
+│ Contract                 │ Artifact                                      │
+├──────────────────────────┼───────────────────────────────────────────────┤
+│ counter.mligo            │ artifacts/counter.tz                          │
+├──────────────────────────┼───────────────────────────────────────────────┤
+│ counter.storages.mligo   │ artifacts/counter.default_storage.tz          │
+│                          │ artifacts/counter.storage.another_count.tz    │
+├──────────────────────────┼───────────────────────────────────────────────┤
+│ counter.parameters.mligo │ artifacts/counter.parameter.increment_by_3.tz │
+└──────────────────────────┴───────────────────────────────────────────────┘
 ```
 
 If you open this file (`artifacts/counter.tz`), you can view the raw Michelson code which will later be originated to the sandbox:
@@ -243,7 +247,7 @@ This will call the counter contract's entrypoint `increment` and will increment 
 Congratulations! At this point, you have run through the basic usage of Taqueria including:
 - Initializing a new Taqueria project
 - Installing plugins for LIGO, Flextesa, and Taquito
-- Creating a new LIGO contract, along with its associated storage list and parameter list files
+- Creating a new LIGO contract, along with its associated storages and parameters files
 - Compiling a LIGO smart contract
 - Starting and querying a local Flextesa sandbox
 - Originating a compiled smart contract to the sandbox
