--- a/website/docs/scaffolds/taco-shop.mdx
+++ b/website/docs/scaffolds/taco-shop.mdx
@@ -145,7 +145,7 @@ type parameter =
 | Make of taco_quantity
 ```
 
-5. `hello-tacos.storageList.mligo`
+5. `hello-tacos.storages.mligo`
 ```js
 #include "hello-tacos.mligo"
 // All storage values must be in this file
