--- a/website/docs/release-notes.mdx
+++ b/website/docs/release-notes.mdx
@@ -92,6 +92,22 @@ plugins=$(jq -r '.plugins[].name' .taq/config.json) && echo $plugins | xargs -n 
 - 🛠️ Fix ➾ Do Not Create the `quickstart.md` File on New Taqueria Projects by @jchenche in [#1491](https://github.com/ecadlabs/taqueria/pull/1491)
 - ✨ Feature ➾ Rename `<CONTRACT>.storages.mligo` to `<CONTRACT>.storageList.mligo` and similarly for the parameter part by @jchenche in [#1507](https://github.com/ecadlabs/taqueria/pull/1507)
 - ✨ Feature ➾ Allow docker images to be overwritten via environment variable (#1425) by @mweichert in [#1445](https://github.com/ecadlabs/taqueria/pull/1445)
+- 👷 Refactor ➾ (ci) move tests to self-hosted Mac Minis by @GImbrailo in [#1509](https://github.com/ecadlabs/taqueria/pull/1509)
+- 🛠️ Fix ➾ Remove `name` Field from `add-to-project` Action by @hu3man in [#1516](https://github.com/ecadlabs/taqueria/pull/1516)
+parameter part"" by @hu3man in [#1522](https://github.com/ecadlabs/taqueria/pull/1522)
+- 🛠️ Fix ➾ Clean up refactor and fix of docker image override by @jchenche in [#1513](https://github.com/ecadlabs/taqueria/pull/1513)
+- 🛠️ Fix ➾ Update e2e test to reflect taco shop scaffold repo change by @jchenche in [#1524](https://github.com/ecadlabs/taqueria/pull/1524)
+- Do not check for stopped container in e2e test by @jchenche in [#1534](https://github.com/ecadlabs/taqueria/pull/1534)
+- To clarify for new users how to run the tests, surface test readme to main readme by @michaelkernaghan in [#1529](https://github.com/ecadlabs/taqueria/pull/1529)
+- 🛠️ Fix ➾ (ci) added a build job for the vscode publish job by @GImbrailo in [#1515](https://github.com/ecadlabs/taqueria/pull/1515)
+- Updated test readme to reflect build process by @alexzbusko in [#1525](https://github.com/ecadlabs/taqueria/pull/1525)
+- made doc corrections to clarify adding contract to taco shop react app config by @michaelkernaghan in [#1527](https://github.com/ecadlabs/taqueria/pull/1527)
+- Reintroduce maxWorker=1 for E2E Jest tests by @danielelisi in [#1531](https://github.com/ecadlabs/taqueria/pull/1531)
+- Scaffolding memory leaks by @mweichert in [#1538](https://github.com/ecadlabs/taqueria/pull/1538)
+- 🛠️ Fix ➾ (build) removed caching for build-docker by @GImbrailo in [#1468](https://github.com/ecadlabs/taqueria/pull/1468)
+- 🧽 Chore ➾ Remove Unused Config Files and Skipped Tests that Depend on Them by @alexzbusko in [#1459](https://github.com/ecadlabs/taqueria/pull/1459)
+- Fixes #1376, e2e tests config cleanup by @mweichert in [#1540](https://github.com/ecadlabs/taqueria/pull/1540)
+- Update bug_report.yml by @hu3man in [#1543](https://github.com/ecadlabs/taqueria/pull/1543)
 
 ## New Contributors
 
