--- a/website/docs/getting-started/quickstart.mdx
+++ b/website/docs/getting-started/quickstart.mdx
@@ -48,6 +48,11 @@ Taqueria provides the command `init` which will create a new directory with the 
 ```shell
 taq init my-first-project
 ```
+Or run the following if you'd like to have the necessary plugins pre-installed for you on initialization (assuming you're a LIGO developer):
+```shell
+taq init my-first-project --workflow ligo
+```
+
 :::caution
 If a project has already been initialized, Taqueria will not re-initialize the project, but will still return a success message. This will be fixed in an upcoming release
 :::
