--- a/website/docs/config/networks.mdx
+++ b/website/docs/config/networks.mdx
@@ -73,7 +73,7 @@ taq originate <contractName> --env testing
 Configuring a mainnet is quite similar to configuring a teztnet with one difference. Users must also create an account, with the mnemonic specified, within the network in order to interact with mainnet. See the example below:
 
 :::danger
-Improvements are on the way. However, we currently only support signing in memory and we require a mnemonic to be written in the config file, so do not commit this file or delete the mnemonic before doing so). This is not the safest way to interact with mainnet so proceed with caution
+Improvements are on the way. However, we currently only support signing in memory and we require a mnemonic to be written in the config file, so do not commit this file or delete the mnemonic before doing so. This is not the safest way to interact with mainnet so proceed with caution
 :::
 
 ```
