--- a/website/docs/config/config-files.mdx
+++ b/website/docs/config/config-files.mdx
@@ -77,7 +77,7 @@ The settings in the `config.json` are used by various taqueria plugins. Each plu
 ## Other Related Files
 
 - Local Config Files:
-    - Each `config.local...json` contains developer specific enviroment configuration. 
+    - Each `config.local...json` contains developer specific environment configuration. 
     - They are details [here](docs/config/environments)
 - State Files: 
     - `state.json` and `...state.json` files are used by taq for internal state.
