--- a/website/docs/config/implicit-accounts.mdx
+++ b/website/docs/config/implicit-accounts.mdx
@@ -45,11 +45,11 @@ You may define as many accounts as you need.
 
 It can be useful to name the accounts to represent different user roles for your contract. For example, an nft contract might have an `artist` and `collector` account which could be used in automated tests. 
 
-The account balance represents the target balance for those accounts. The enviroment plugins will provide a mechnism to instantiate and maintain the balance for those account.
+The account balance represents the target balance for those accounts. The environment plugins will provide a mechanism to instantiate and maintain the balance for those account.
 
 For example, with the flextesa plugin during the `start sandbox` task, it will automatically instantiate the named accounts and ensure they have the target balance.
 
-Since this is specific to the developer's sandbox, these accounts are in the `config.local...` file for the sandbox environemnt.
+Since this is specific to the developer's sandbox, these accounts are in the `config.local...` file for the sandbox environment.
 
 ```json
     "accounts": {
@@ -81,7 +81,7 @@ Since this is specific to the developer's sandbox, these accounts are in the `co
     }
 ```
 
-For other enviroment types, the taquito plugin has the `instantiate` and `fund` tasks to manually maintain these accounts.
+For other environment types, the taquito plugin has the `instantiate` and `fund` tasks to manually maintain these accounts.
 
 :::note
 It is planned to improve the automation around this.
