--- a/website/docs/config/implicit-accounts.mdx
+++ b/website/docs/config/implicit-accounts.mdx
@@ -45,7 +45,7 @@ You may define as many accounts as you need.
 
 It can be useful to name the accounts to represent different user roles for your contract. For example, an nft contract might have an `artist` and `collector` account which could be used in automated tests. 
 
-The account balance represents the target balance for those accounts. The environment plugins will provide a mechanism to instantiate and maintain the balance for those account.
+The account balance represents the target balance for those accounts. The environment plugins will provide a mechanism to instantiate and maintain their balance.
 
 For example, with the flextesa plugin during the `start sandbox` task, it will automatically instantiate the named accounts and ensure they have the target balance.
 
