Remove contract registry from repo

--- a/website/docs/vs-code-extension/overview.mdx
+++ b/website/docs/vs-code-extension/overview.mdx
@@ -61,10 +61,9 @@ Plugins section allows to install and uninstall plugins to the project.
 
 ## Contracts Section
 
-Contracts section allows to see all contracts in `Contracts` folder. It also allows to add/remove contract to the contract registry and also compile contract if compile plugin installed.
+Contracts section allows users to see all contracts in `Contracts` folder. It also allows users compile contract if compile plugin installed.
 Each compiler has it is own icon e. g. Archetype, SmartPy, LIGO
-1. Add/Remove contract to/from contract registry
-2. Compile contract to Michelson format
+1. Compile contract to Michelson format
 
 <img alt="VS Code extension Contracts section" src={useBaseUrl('/img/vs-code/taqueria-vs-code-contracts-section.png')} />
 
