Fix hyperlink to flextesa plugin documentation

--- a/website/docs/config/networks.mdx
+++ b/website/docs/config/networks.mdx
@@ -3,7 +3,7 @@ title: Testnet and Mainnet Configuration
 ---
 
 :::note
-This document details the configuration and use of Tezos testnets and mainnet. If you are looking for information on running or originating to a sandbox, please see the Flextesa documentation [here](docs/plugins/plugin-flextesa)
+This document details the configuration and use of Tezos testnets and mainnet. If you are looking for information on running or originating to a sandbox, please see [the Flextesa plugin documentation](https://taqueria.io/docs/plugins/plugin-flextesa/).
 :::
 
 ## Introduction
